--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Galeria de Imagens</h1>
     
     <div class="image-container">
-        <img src="imagem1.jpg" alt="Imagem 1">
+        <img src="IMG-20241022-WA0015.jpg" alt="Imagem 1">
         <img src="imagem2.jpg" alt="Imagem 2">
         <img src="imagem3.jpg" alt="Imagem 3">
     </div>
