--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="image-container">
         <img src="IMG-20241022-WA0015.jpg" alt="Imagem 1">
-        <img src="imagem2.jpg" alt="Imagem 2">
+        <img src="IMG-20241022-WA0016.jpg" alt="Imagem 2">
         <img src="imagem3.jpg" alt="Imagem 3">
     </div>
 </body>
