--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="image-container">
         <img src="IMG-20241022-WA0015.jpg" alt="Imagem 1">
         <img src="IMG-20241022-WA0016.jpg" alt="Imagem 2">
-        <img src="imagem3.jpg" alt="Imagem 3">
+        <img src="IMG-20241022-WA0017.jpg" alt="Imagem 3">
     </div>
 </body>
 </html>
